crates/ars-components/src/utility/snapshots/ars_components__utility__button__tests__button_loading_indicator_idle.snap
---
source: crates/ars-components/src/utility/button.rs
expression: "snapshot_attrs(&service(test_props()).connect(&|_|\n{}).loading_indicator_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "loading-indicator",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "button",
            ),
        ),
        (
            Aria(
                Hidden,
            ),
            String(
                "true",
            ),
        ),
    ],
    styles: [],
}
